# youdao

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  release.sh  requirements.txt  setup.py  youdao.py
youdao/: __init__.py  cmd.py  config.py  customizer.py  entry.py  query.py  racer.py  run.py  serve.py  spider.py  sqlsaver.py  storage.py  youdao.py  youdao_temp.py
youdao/service/: __init__.py  model.py  run.py
youdao/util/: config.py  daemon.py  mysql.py  nosql.py
