[project]
name = "YoudaoDict"
dynamic = ["version"]
authors = [{ name = "hellflame" }]
description = "通过有道爬虫查询单词"
keywords = ["有道", "翻译", "youdao", "crawler", "spider"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4",
    "httpx",
    "aiosqlite"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Environment :: Console",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX"
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/hellflame/youdao"
Repository = "https://github.com/hellflame/youdao"
Issues = "https://github.com/hellflame/youdao/issues"
Changelog = "https://github.com/hellflame/youdao?tab=readme-ov-file#%E5%BC%80%E5%8F%91%E5%8E%86%E7%A8%8B"

[project.scripts]
youdao = "youdao.cmd:main"
yd-serve = "youdao.serve:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "youdao.__version__"}